[gd_scene load_steps=6 format=3 uid="uid://8oy3xm2sff8"]

[ext_resource type="PackedScene" uid="uid://ciu2qgckgu5sr" path="res://addons/character-controller/core/controller.tscn" id="1_l26lu"]
[ext_resource type="Script" uid="uid://dliglgfw3k3h7" path="res://addons/character-controller/fps/fps_controller_3d.gd" id="2_426o3"]
[ext_resource type="Script" uid="uid://b1vv7wqamups4" path="res://addons/character-controller/fps/head_movement_3d.gd" id="3_pqlf6"]
[ext_resource type="Script" uid="uid://dj8mdvjk8fldy" path="res://addons/character-controller/fps/bob/head_bob.gd" id="4_6ym6a"]
[ext_resource type="Curve" path="res://addons/character-controller/fps/bob/bob_curve.tres" id="5_cv58a"]

[node name="FPSController3D" instance=ExtResource("1_l26lu")]
script = ExtResource("2_426o3")
fov_change_speed = 4
sprint_fov_multiplier = 1.1
crouch_fov_multiplier = 0.95
swim_fov_multiplier = 1.0
mouse_sensitivity = 2.0
vertical_angle_limit = 90.0
step_bob_enabled = true
vertical_horizontal_ratio = 2
jump_bob_enabled = true
rotation_to_move = true
speed_rotation = 4.0
angle_limit_for_rotation = 0.1

[node name="Head" type="Marker3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.64, 0)
script = ExtResource("3_pqlf6")

[node name="Head Bob" type="Node" parent="Head" index="0"]
script = ExtResource("4_6ym6a")
head_path = NodePath("../FirstPersonCameraReference")
bob_curve = ExtResource("5_cv58a")

[node name="FirstPersonCameraReference" type="Marker3D" parent="Head" index="1"]

[node name="ThirdPersonCameraReference" type="Marker3D" parent="Head" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)
